fixed some positioning issues on safari and ios generally

--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -13,6 +13,8 @@
 .footer-content {
   display: flex;
   position: relative;
+  background: none;
+  width: fit-content;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: flex-start;
@@ -21,39 +23,28 @@
 }
 
 .social-media-container {
-  background-color: transparent;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
+  background: none;
+  width: fit-content;
 }
 
 .footer-ul {
   display: flex;
-  flex-direction: row;
   list-style: none;
   gap: 2rem;
   background: none;
 
-  li {
-    background: none;
-    width: fit-content;
-  }
-
-  li > a {
+  li,
+  a {
     background: none;
   }
 }
 
 .icon-link {
-  width: fit-content;
+  width: 32px;
+  position: relative;
   font-size: 2rem;
-  background-color: transparent;
+  background: none;
   transition: var(--transition);
-
-  @media (min-width: 50em) {
-    font-size: 2.5rem;
-  }
 
   &:hover {
     transform: translateY(-3px);
