--- a/src/components/projects/cards/modal/Modal.module.scss
+++ b/src/components/projects/cards/modal/Modal.module.scss
@@ -1,172 +1,174 @@
 .motion-div {
-	width: auto;
-	border-radius: 20px;
-	background-color: rgba(255, 255, 255, 0.11);
-	backdrop-filter: blur(3px);
+  width: auto;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.11);
+  backdrop-filter: blur(3px);
 }
 
 .background {
-	height: 100vh;
-	background: rgba(0, 0, 0, 0.94);
-	position: fixed;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	z-index: 10;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.94);
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9;
 }
 
 .modalImg {
-	object-fit: contain;
-	border-top: var(--border-specs);
-	border-right: var(--border-specs);
-	border-left: var(--border-specs);
-	background-image: linear-gradient(130deg, var(--main-orange), var(--main-red) 41.07%, var(--main-cyan) 76.05%);
-	width: 100%;
-	height: auto;
-	padding: 1rem;
-	border-radius: var(--border-radius-modal) var(--border-radius-modal) 0 0;
+  object-fit: contain;
+  border-top: var(--border-specs);
+  border-right: var(--border-specs);
+  border-left: var(--border-specs);
+  background-image: linear-gradient(
+    130deg,
+    var(--main-orange),
+    var(--main-red) 41.07%,
+    var(--main-cyan) 76.05%
+  );
+  width: 100%;
+  height: auto;
+  padding: 1rem;
+  border-radius: var(--border-radius-modal) var(--border-radius-modal) 0 0;
 }
 
 .modalContent {
-	border: var(--border-specs);
-	padding: 1rem;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	align-items: center;
-	gap: 1rem;
-	color: var(--text-light);
-	background: transparent;
-	border-radius: 0 0 var(--border-radius-modal) var(--border-radius-modal);
+  border: var(--border-specs);
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  gap: 1rem;
+  color: var(--text-light);
+  background: transparent;
+  border-radius: 0 0 var(--border-radius-modal) var(--border-radius-modal);
 
-	h1 {
-		font-size: 1.5rem;
-		background: transparent;
-	}
+  h1 {
+    font-size: 1.5rem;
+    background: transparent;
+  }
 
-	p,
-	a {
-		font-size: 1rem;
-		font-family: "Intel One Mono", sans-serif;
-		background: none;
-	}
+  p,
+  a {
+    font-size: 1rem;
+    font-family: "Intel One Mono", sans-serif;
+    background: none;
+  }
 }
 
 .downPaaS {
-	font-style: italic;
+  font-style: italic;
 }
 
 .modal-close {
-	cursor: pointer;
-	position: absolute;
-	top: 5px;
-	right: 5px;
-	width: 32px;
-	height: 32px;
-	padding: 0;
-	z-index: 10;
-	background: none;
-	color: var(--text-light);
+  cursor: pointer;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  width: 32px;
+  height: 32px;
+  padding: 0;
+  z-index: 10;
+  background: none;
+  color: var(--text-light);
 }
 
 .modalWrapper {
-	width: 300px;
-	box-shadow: var(--box-shadow-modal);
-	color: #000;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	position: relative;
-	z-index: 10;
-	border-radius: var(--border-radius-modal);
+  width: 300px;
+  box-shadow: var(--box-shadow-modal);
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  z-index: 10;
+  border-radius: var(--border-radius-modal);
 }
 
 .icon-container {
-	display: flex;
-	justify-content: flex-end;
-	background: none;
-	gap: 2rem;
-	flex-direction: row;
-	width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  background: none;
+  gap: 2rem;
+  flex-direction: row;
+  width: 100%;
 
-	a {
-		width: fit-content;
-	}
+  a {
+    width: fit-content;
+  }
 }
 
 .icon {
-	color: var(--text-light);
-	font-size: 30px;
-	background: transparent;
+  color: var(--text-light);
+  font-size: 30px;
+  background: transparent;
 }
 
-
 @media (min-width: 66em) {
-	.motion-div {
-		width: 70%;
-	}
+  .motion-div {
+    width: 70%;
+  }
 
-	.modalWrapper {
-		width: 100%;
-		height: min-content;
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-	}
+  .modalWrapper {
+    width: 100%;
+    height: min-content;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
 
-	.icon-container {
-		display: flex;
-		width: fit-content;
-		justify-content: center;
-		align-items: center;
-		flex-direction: row;
-	}
+  .icon-container {
+    display: flex;
+    width: fit-content;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+  }
 
-	.icon {
-		display: flex;
-		transition: var(--transition);
+  .icon {
+    display: flex;
+    transition: var(--transition);
 
+    &:hover {
+      transform: translateY(-3px);
+      transition: var(--transition);
+    }
+  }
 
-		&:hover {
-			transform: translateY(-3px);
-			transition: var(--transition);
-		}
+  .modalContent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2em;
+    border-radius: 0 var(--border-radius-modal) var(--border-radius-modal) 0;
 
-	}
+    h1 {
+      font-size: 2rem;
+    }
 
-	.modalContent {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		padding: 2em;
-		border-radius: 0 var(--border-radius-modal) var(--border-radius-modal) 0;
+    p {
+      font-size: 1.25rem;
+    }
+  }
 
-		h1 {
-			font-size: 2rem;
-		}
+  .modalImg {
+    background: transparent;
+    height: 500px;
+    border-top: var(--border-specs);
+    border-bottom: var(--border-specs);
+    border-left: var(--border-specs);
+    border-right: 0;
+    border-radius: var(--border-radius-modal) 0 0 var(--border-radius-modal);
+  }
 
-		p {
-			font-size: 1.25rem;
-		}
-	}
-
-	.modalImg {
-		background: transparent;
-		height: 500px;
-		border-top: var(--border-specs);
-		border-bottom: var(--border-specs);
-		border-left: var(--border-specs);
-		border-right: 0;
-		border-radius: var(--border-radius-modal) 0 0 var(--border-radius-modal);
-	}
-
-	.modal-close {
-		position: absolute;
-		top: 20px;
-		right: 20px;
-		width: 32px;
-		height: 32px;
-		padding: 0;
-		z-index: 10;
-		background-color: transparent;
-	}
+  .modal-close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 32px;
+    height: 32px;
+    padding: 0;
+    z-index: 10;
+    background-color: transparent;
+  }
 }
